--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,140 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
+:root{
+    --blue-ocean: #0098a1;
+}
 
 *{
     font-family: 'kalam', cursive;
+    padding: 0%;
+    margin: 0%;
+    text-decoration: none;
+    text-transform: capitalize;
+}
+
+html{
+    overflow: hidden;
+    font-size: 62.5%;
+}
+
+/* body{
+    background: #333;
+} */
+
+header{
+width: 96%;
+background: #fff;
+display: flex;
+align-items: center;
+justify-content: space-between;
+position: fixed;
+top: 1.5rem;
+left: 50%;
+transform: translateX(-50%);
+border-radius: .5rem;
+box-shadow: 0 .3rem .5rem rgba(8, 8, 8, 0.3);
+padding: .3rem .2rem;
+transition: .2s linear;
+z-index: 1000;
+}
+
+.header-active{
+    top: 0;
+    width: 100%;
+    border-radius: 0;
+}
+
+header .logo{
+    color: #333;
+    font-size: 3rem;
+}
+
+header .logo span{
+    color: var(--blue-ocean)
+}
+
+header .navbar ul{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+}
+
+header .navbar ul li{
+    margin: 0 1rem;
+}
+
+header .navbar ul li a{
+    color: #333;
+    font-size: 2rem;
+    transition: .2s linear;
+}
+
+header .navbar ul li .active,
+header .navbar ul li a:hover{
+    color: var(--blue-ocean);
+}
+
+header .fa-bars{
+    color: var(--blue-ocean);
+    font-size: 3rem;
+    cursor: pointer;
+    display: none;
+}
+
+
+
+
+
+/* media query */
+
+@media screen and (max-width:768px) {
+    html{
+        font-size: 55%;
+    }
+
+    header .fa-bars{
+        display: block;
+        cursor: pointer;
+    }
+
+    header .navbar{
+        position: fixed;
+        top: -100rem;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        background: #fff;
+        border-radius: .5rem;
+        box-shadow: 0 .3rem .5rem rgba(8, 8, 8, 0.3);
+        z-index: 1000;
+        transition: .2s linear;
+        opacity: 0;
+    }
+    header .navbar ul{
+        flex-flow: column;
+    }
+
+    header .navbar ul li{
+        margin: 1rem 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    header .navbar ul li a{
+        display: block;
+        font-size: 3rem;
+    }
+
+    header .navbar ul li .active,
+    header .navbar ul li a:hover{
+        background: var(--blue-ocean);
+        color: #fff;
+    }
+
+    header .nav-toggle{
+        top: 5.5rem;
+        opacity: 1;
+    }
 }
