--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@
 }
 
 html{
-    overflow: hidden;
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 .heading{
@@ -29,10 +29,9 @@ html{
     color: var(--blue-ocean);
 }
 
-/* body{
-    background: #333;
-    height: 1024px;
-} */
+body{
+    overflow-x:hidden;
+}
 
 header{
 width: 96%;
@@ -190,7 +189,7 @@ header .fa-bars{
 }
 
 .feature{
-    height: 100vh;
+    min-height: 100vh;
     background:#f9f9f9;
 }
 
@@ -255,9 +254,9 @@ header .fa-bars{
 }
 
 .feature .card-container .content .btn:hover{
-    background: none;
-    border: 2rem solid var(--blue-ocean);
+    border: .2rem solid var(--blue-ocean);
     color: var(--blue-ocean);
+    background: none;
 }
 
 .feature .card-container .card .discount{
@@ -273,6 +272,55 @@ header .fa-bars{
     text-align: center;
     font-size: 2rem;
 }
+
+.about{
+    min-height: 100vh;
+}
+
+.about .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.about .row .image img{
+    height: 65vh;
+    width: 50vw;
+}
+
+.about .row .content h3{
+    font-size: 4rem;
+    color: var(--blue-ocean);
+}
+
+.about .row .content p{
+    font-size: 1.9rem;
+    color: #333;
+}
+
+.about .row .content .btn{
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: .2s linear;
+    height: 4rem;
+    width: 18rem;
+    margin-top: 1rem;
+    color: #fff;
+    background: var(--blue-ocean);
+    font-size: 2rem;
+    border-radius: .5rem;
+}
+.about .row .content .btn1,
+.about .row .content .btn:hover{
+    background: none;
+    color: var(--blue-ocean);
+    border: .2rem solid var(--blue-ocean);
+    margin-right: 1rem;
+}
+
 
 
 
@@ -361,6 +409,27 @@ header .fa-bars{
 
     .home{
         box-sizing: border-box;
+    }
+
+    .about .row{
+        flex-flow: column;
+    }
+
+    .about .row .image{
+        margin: 0 2rem;
+    }
+
+    .about .row .image img{
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .about .row .content{
+        text-align: center;
+    }
+
+    .about .row .content .btn1{
+        margin-right: 0;
     }
 }
 
