--- a/css/style.css
+++ b/css/style.css
@@ -321,10 +321,64 @@ header .fa-bars{
     margin-right: 1rem;
 }
 
+.gallery{
+    min-height: 100vh;
+}
 
+.gallery .box-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 auto;
+}
 
+.gallery .box-container .box{
+    height: 20rem;
+    width: 30rem;
+    margin: 2rem;
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+}
 
+.gallery .box-container .box img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
 
+.gallery .box-container .box .icons{
+    position: absolute;
+    top: 120%;
+    left: 0;
+    background: linear-gradient(transparent, #333);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .2s linear;
+}
+
+.gallery .box-container .box:hover .icons{
+    opacity: 1;
+    top: 0;
+}
+
+.gallery .box-container .box .icons a{
+    color: #fff;
+    box-shadow: 0 .1rem .3rem #000;
+    font-size: 3rem;
+    padding-bottom: 2rem;
+}
+
+.gallery .box-container .box .icons a:hover{
+    color: red;
+    /* font-size: 4rem; */
+}
 
 
 
@@ -409,6 +463,10 @@ header .fa-bars{
 
     .home{
         box-sizing: border-box;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
 
     .about .row{
