--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 *{
-    font-family: 'kalam', cursive;
+    font-family: 'Kalam', cursive;
     padding: 0%;
     margin: 0%;
     text-decoration: none;
@@ -34,20 +34,20 @@ body{
 }
 
 header{
-width: 96%;
-background: #fff;
-display: flex;
-align-items: center;
-justify-content: space-between;
-position: fixed;
-top: 1.5rem;
-left: 50%;
-transform: translateX(-50%);
-border-radius: .5rem;
-box-shadow: 0 .3rem .5rem rgba(8, 8, 8, 0.3);
-padding: .3rem .2rem;
-transition: .2s linear;
-z-index: 1000;
+    width: 96%;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 1.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: .5rem;
+    box-shadow: 0 .3rem .5rem rgba(8, 8, 8, 0.3);
+    padding: .3rem .2rem;
+    transition: .2s linear;
+    z-index: 1000;
 }
 
 .header-active{
@@ -441,6 +441,73 @@ header .fa-bars{
     padding: 1rem .1rem;
 }
 
+.contact .row{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.contact .row .contact-info .box{
+    margin: 4rem 2rem;
+}
+
+.contact .row .contact-info .box h3{
+    font-size: 2rem;
+    color: #333;
+}
+.contact .row .contact-info .box h3 i{
+    color: var(--blue-ocean);
+}
+
+.contact .row .contact-info .box p{
+    padding-left: 3rem;
+    font-size: 1.7rem;
+    color: #aaa;
+}
+
+.contact .row .contact-form-container{
+    width: 50%;
+}
+
+.contact .row .contact-form-container h3{
+    font-size: 4rem;
+    padding-top: 4rem;
+    color: var(--blue-ocean);
+}
+
+
+.contact .row .contact-form-container form input, textarea{
+    outline: none;
+    border: .2rem solid var(--blue-ocean);
+    height: 4rem;
+    background: #fff;
+    padding: 0 1rem;
+    margin: 1rem 0;
+    font-size: 1.8rem;
+    width: 49%;
+    /* border-radius: 1rem; */
+}
+
+.contact .row .contact-form-container form textarea{
+    width: 100%;
+    padding: 1rem;
+    resize: none;
+    height: 20%;
+}
+
+.contact .row .contact-form-container form input[type="submit"]{
+    color: var(--blue-ocean);
+    border: .2rem solid var(--blue-ocean);
+    cursor: pointer;
+    transition: .2s linear;
+    width: 20rem;
+}
+
+.contact .row .contact-form-container form input[type="submit"]:hover{
+    color: #fff;
+    background: var(--blue-ocean);
+}
+
 
 
 
@@ -545,6 +612,16 @@ header .fa-bars{
     .about .row .content .btn1{
         margin-right: 0;
     }
+
+    .contact .row{
+        flex-flow: column;
+        align-items: flex-start;
+    }
+
+    .contact .row .contact-form-container{
+        width: 90%;
+        margin: 0 auto;
+    }
 }
 
 @media (max-width:500px) {
@@ -559,5 +636,20 @@ header .fa-bars{
 
     .home .form-container form input[type="submit"]{
         width: 100%;
+    }
+
+    .contact .row .contact-form-container form input{
+        margin: 1rem 0;
+        width: 100%;
+    }
+
+    .contact .row .contact-form-container form input[type="submit"]{
+        margin: 1rem 0;
+        width: 100%;
+    }
+
+    .contact .row .contact-form-container form input[type="submit"]:hover{
+        color: #fff;
+        background: var(--blue-ocean);
     }
 }
